--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Update Log</title>
     </head>
     <body>
-        <p id="ver">1.0.0.27</p>
-        <p id="desc">-New update app <br> -Bug fixes <br> -Added support so profile and lockscreen set images are remembered. <br> -You can now set custom themes <br> -Fixed account bugs</p>
+        <p id="ver">1.0.0.28</p>
+        <p id="desc">-Bug fixes <br> -Added new themes <br> -Added new security features <br> -Added new alarm ability in clock app</p>
     </body>
 </html>
