--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Update Log</title>
     </head>
     <body>
-        <p id="ver">1.0.0.28</p>
-        <p id="desc">-Bug fixes <br> -Added new themes <br> -Added new security features <br> -Added new alarm ability in clock app</p>
+        <p id="ver">1.0.0.29</p>
+        <p id="desc">-Bug fixes <br> -Added new themes <br> -Added new wallpapers <br> -Added new Themes app <br> -Added theme packs <br> -Software optimizations <br> -Stability updates</p>
     </body>
 </html>
