--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
         <title>Update Log</title>
     </head>
     <body>
-        <p id="ver">1.0.0.29</p>
-        <p id="desc">-Bug fixes <br> -Added new themes <br> -Added new wallpapers <br> -Added new Themes app <br> -Added theme packs <br> -Software optimizations <br> -Stability updates</p>
+        <p id="ver">1.0.0.30</p>
+        <p id="desc">Olive OS Home is no longer getting updates. <br>
+        Upgrade to Olive OS Web Edition: <br>
+        https://olivewebsoftware.github.io/oliveweb/index11.html <br>
+        Olive OS Web Edition has many more new features and software <br>
+        improvments.</p>
     </body>
 </html>
