--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     </head>
     <body>
         <p id="ver">1.0.0.30</p>
-        <p id="desc">Olive OS Home is no longer getting updates. <br>
-        Upgrade to Olive OS Web Edition: <br>
-        https://olivewebsoftware.github.io/oliveweb/index11.html <br>
-        Olive OS Web Edition has many more new features and software <br>
-        improvments.</p>
+        <p id="desc">Olive OS Home has been <br>
+        discontinued and is no longer getting <br>
+        updates. Download Olive OS S below: <br>
+        https://olivewebsoftware.github.io/oliveweb/index12.html</p>
     </body>
 </html>
